# hs-discord-webhook

./: .gitignore  CHANGELOG.md  README.md  bots.cabal  cabal.project  default-nix.nix  default.nix  discord-webhook.cabal  project.yml
.github/workflows/: main.yml  main.yml.disabled  nix.yml.disabled
lib/: DiscordHandler.hs  MyHandler.hs
src/: Main.hs
