cabal-version:   3.4
name:            bots
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Dan Dart
maintainer:      git@dandart.co.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -static

library
  import:             warnings
  exposed-modules:    DiscordHandler
  build-depends:
    , aeson              ^>=2.2.3.0
    , base               ^>=4.20.0.0
    , base16-bytestring
    , bytestring         ^>=0.12.2.0
    , containers         ^>=0.7
    , cryptonite
    , mtl                ^>=2.3.1
    , openfaas
    , text               ^>=2.1.2

  -- , errors ^>=2.3.0
  -- , exceptions
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

executable bots
  import:             warnings
  main-is:            Main.hs
  build-depends:
    , aeson       ^>=2.2.3.0
    , base        ^>=4.20.0.0
    , bots
    , bytestring  ^>=0.12.2.0
    , openfaas

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

test-suite openfaas-test
  import:             warnings
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base        ^>=4.20.0.0
    , bots
    , hspec       ^>=2.11.10
    , QuickCheck  ^>=2.15.0.1

  other-modules:
  build-tool-depends: hspec-discover:hspec-discover
